--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@ body {
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+a {
+    text-decoration: none !important;
+    color: #000 !important;
+}
